# FeverCode

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  AUDIT_SUMMARY.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FEATURE_MATRIX.md  IMPLEMENTATION_STRATEGY.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  MVP_SPEC.md  README.md  REALITY_AUDIT.md  ROADMAP.md  SECURITY.md  SOULS.md  TEST_REPORT.md  cargo  claw-code-architecture.md  dist-workspace.toml  fevercode.config.example.toml  fevercode.souls.example.toml  install.ps1  install.sh  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
.sisyphus/plans/: fevercode-overhaul-plan.md  provider-expansion-plan.md
crates/fever-agent/: Cargo.toml
crates/fever-agent/src/: agent.rs  fighting_mode.rs  lib.rs  loop_driver.rs  operational_verifier.rs  prompt_improver.rs  requirements_interrogator.rs  role.rs
crates/fever-agent/tests/: loop_driver_edge_cases.rs  loop_driver_tests.rs
crates/fever-browser/: Cargo.toml
crates/fever-browser/src/: client.rs  error.rs  lib.rs  tool.rs
crates/fever-cli/: Cargo.toml
crates/fever-cli/src/: agent_handle.rs  local_version.rs  main.rs
crates/fever-cli/tests/: cli_integration.rs
crates/fever-config/: Cargo.toml
crates/fever-config/src/: config.rs  lib.rs  provider.rs
crates/fever-core/: Cargo.toml
crates/fever-core/src/: agent.rs  error.rs  event.rs  execution.rs  instructions.rs  lib.rs  memory.rs  permission.rs  retry.rs  task.rs  telemetry.rs  tool.rs  understand.rs
crates/fever-core/tests/: core_tests.rs
crates/fever-onboard/: Cargo.toml
crates/fever-onboard/src/: lib.rs  onboarder.rs  profile.rs  questions.rs  scaffold.rs
crates/fever-onboard/tests/: fever_onboard_tests.rs
crates/fever-providers/: Cargo.toml
crates/fever-providers/src/: adapter.rs  client.rs  error.rs  lib.rs  models.rs  registry.rs
crates/fever-providers/src/adapters/: anthropic.rs  gemini.rs  mock.rs  mod.rs  ollama.rs  openai.rs
crates/fever-providers/tests/: openrouter_integration.rs  provider_conformance.rs  provider_unit_tests.rs
crates/fever-release/: Cargo.toml
crates/fever-release/src/: lib.rs
crates/fever-search/: Cargo.toml
crates/fever-search/src/: cache.rs  client.rs  error.rs  lib.rs  parser.rs  result.rs
crates/fever-telegram/: Cargo.toml
crates/fever-telegram/src/: api.rs  client.rs  command.rs  config.rs  error.rs  event.rs  lib.rs  rate_limiter.rs  reconnect.rs  service.rs  state.rs
crates/fever-telegram/tests/: agent_state_tests.rs  auto_link_flow_tests.rs  config_from_env_tests.rs  event_and_command_tests.rs  poll_commands_parsing_tests.rs  rate_limiter_tests.rs  reconnect_backoff_tests.rs
crates/fever-tools/: Cargo.toml
crates/fever-tools/src/: filesystem.rs  git_tool.rs  grep_tool.rs  lib.rs  shell.rs
crates/fever-tools/tests/: filesystem_tests.rs
crates/fever-tui/: Cargo.toml
crates/fever-tui/src/: agent_bridge.rs  app.rs  event.rs  lib.rs  render.rs  ui.rs  widgets.rs
crates/fever-tui/src/animation/: mod.rs  pulse.rs  reveal.rs  transition.rs
crates/fever-tui/src/components/: input_bar.rs  logo.rs  message.rs  mod.rs  progress.rs  status_bar.rs  tool_card.rs
crates/fever-tui/src/screens/: chat.rs  home.rs  mod.rs  onboarding.rs  settings.rs
crates/fever-tui/src/slash/: commands.rs  help.rs  mod.rs
crates/fever-tui/src/theme/: cold_sacred.rs  colors.rs  mod.rs
crates/fever-tui/src/util/: glyphs.rs  mod.rs  text.rs
docs/: AGENTS_AND_TOOLS.md  FEVER_V2_DESIGN.md  PROVIDERS.md  ROADMAP.md  SECURITY.md  agents.md  architecture.md  commands.md  context-economy.md  getting-started.md  index.html  install.md  mcp.md  providers.md  rag.md  releases.md  roadmap.md  safety.md  session-continuity.md  souls.md
examples/: README.md  cli-tool.md  config-example.toml
examples/mcp/: mcp.example.json
fever-cloud-api/: Cargo.toml
fever-cloud-api/src/: license.rs  main.rs  stripe.rs  sync.rs
homebrew-tap/: fever.rb
prompts/: opencode-build-fevercode.md
scripts/: release-build.sh
site/: app.js  index.html  robots.txt  sitemap.xml  styles.css
src/: agent_loop.rs  agents.rs  analytics.rs  audit.rs  clarification.rs  config.rs  context_economy.rs  custom_souls.rs  events.rs  lib.rs  license.rs  main.rs  memory.rs  presets.rs  safety.rs  souls.rs  sync.rs  team.rs  telemetry.rs  tui.rs  workspace.rs
src/approval/: mod.rs
src/mcp/: mod.rs
src/patch/: mod.rs
src/providers/: external_cli.rs  mod.rs  model_discovery.rs  openai_compat.rs
src/rag/: chunker.rs  embedder.rs  ingest.rs  mastermind.rs  mod.rs  store.rs
src/tools/: ai_power_tools.rs  code_quality.rs  dev_workflow.rs  extended_files.rs  extended_git.rs  external_integrations.rs  files.rs  git_tools.rs  integrations.rs  mcp_bridge.rs  mod.rs  shell.rs  ux_tools.rs
