[workspace]
members = [
    "crates/fever-core",
    "crates/fever-agent",
    "crates/fever-providers",
    "crates/fever-tools",
    "crates/fever-search",
    "crates/fever-browser",
    "crates/fever-tui",
    "crates/fever-config",
    "crates/fever-cli",
    "crates/fever-release",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["FeverDream Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/FeverDream-dev/FeverCode"
keywords = ["ai", "coding", "agent", "terminal", "tui"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.20"
parking_lot = "0.12"

# MCP and browser
tokio-tungstenite = "0.26"
serde_urlencoded = "0.7"

# Search and HTML
scraper = "0.22"
url = "2.5"

# Testing
mockito = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
