[workspace]
members = [
    "crates/fever-core",
    "crates/fever-agent",
    "crates/fever-providers",
    "crates/fever-tools",
    "crates/fever-search",
    "crates/fever-browser",
    "crates/fever-tui",
    "crates/fever-config",
    "crates/fever-cli",
    "crates/fever-release",
    "crates/fever-telegram",
    "crates/fever-onboard",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["FeverDream Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/FeverDream-dev/FeverCode"
keywords = ["ai", "coding", "agent", "terminal", "tui"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"
fuzzy-matcher = "0.3"
pulldown-cmark = "0.12"
unicode-segmentation = "1.12"
dirs = "6"
toml = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.20"
parking_lot = "0.12"
tokio-tungstenite = "0.26"
serde_urlencoded = "0.7"
scraper = "0.22"
url = "2.5"
mockito = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
