[package]
name = "fever-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fever-core = { path = "../fever-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = "5.0"
directories = "5.0"

[dev-dependencies]
tempfile = "3.14"
