[package]
name = "fever-telegram"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fever-core = { path = "../fever-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
