[package]
name = "fever-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fever-core = { path = "../fever-core" }
fever-agent = { path = "../fever-agent" }
fever-config = { path = "../fever-config" }
fever-providers = { path = "../fever-providers" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

tui-textarea = { workspace = true }
fuzzy-matcher = { workspace = true }
pulldown-cmark = { workspace = true }
unicode-segmentation = { workspace = true }
dirs = { workspace = true }
unicode-width = "0.2"
